force-app/main/default/objects/Self_Service_Statistic__c/Self_Service_Statistic__c.object-meta.xml
<CustomObject>
    <description>Measures how long a customer spends on each tab (PER-2784)</description>
    <label>Self Service Statistic</label>
    <nameField>
        <displayFormat>SSS-{00000000}</displayFormat>
        <label>Self Service Statistic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Self Service Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>