force-app/main/default/objects/Self_Service_Statistic__c/fields/Dropped__c.field-meta.xml
<CustomField>
    <fullName>Dropped__c</fullName>
    <description>Order linked to the current buyflow. (PER-2784)</description>
    <formula>ISBLANK( End_Time__c )</formula>
    <label>Dropped</label>
    <type>Checkbox</type>
</CustomField>