force-app/main/default/objects/Self_Service_Statistic__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Tracks when customer advances to the following step. (PER-2784)</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>