force-app/main/default/objects/Self_Service_Statistic__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity linked to the current buyflow. (PER-2784)</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Self Service Statistics</relationshipLabel>
    <relationshipName>Self_Service_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>