force-app/main/default/objects/Self_Service_Statistic__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order linked to the current buyflow. (PER-2784)</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Self Service Statistics</relationshipLabel>
    <relationshipName>Self_Service_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>