force-app/main/default/objects/Self_Service_Statistic__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Program selected by customer. (PER-2784)</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>Earthlink</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>