force-app/main/default/objects/Self_Service_Statistic__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Tracks when customer starts the current step. (PER-2784)</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>