force-app/main/default/objects/Self_Service_Statistic__c/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <description>Name of the tab or component the customer is on. (PER-2784)</description>
    <label>Tab Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>